
2019-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: increased COB_MAX_WORDLEN to 63 per COBOL 202x

2019-04-19  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: fixed some bad/misplaced casts to size_t
	* common.c, screenio.c: initial approach to add mouse support
	  via COB_MOUSE_FLAGS, including exception values
	* common.c, screenio.c: adjustments to COB_INSERT_MODE are taken
	  into account at runtime

2019-04-15  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (relative_read_next): change only place that did not use
	  size_t for relsize (which should be no problem as it used cob_s64_t
	  before)
	* fileio.c: adjusted some counters to use size_t instead of casting them
	* common.c, coblocal.h (cob_min_int, cob_max_int): moved smaller helper
	  functions that were defined as both inline and extern as static inline
	  in coblocal.h

2019-04-14  Ron Norman <rjn@inglenet.com>

	* screenio.c: define ALT_DEL, ALT_LEFT, ALT_RIGHT
	  using \033 for Escape instead of \E to avoid C compiler problems

2019-04-12  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c: define PDC_NCMOUSE to use ncurses compatible mouse api

2019-04-07  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (get_sleep_nanoseconds, internal_nanosleep): new functions;
	  moved the actual sleep code from cob_sys_oc_nanosleep and cob_sys_sleep
	  to a common place and finally allow fractions of seconds in C$SLEEP
	* common.c, common.h (cob_continue_after): new function for FR #354

2019-03-25  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_info): output endianess and native EBCDIC

2019-03-23  Simon Sobisch <simonsobisch@gnu.org>

	* libcob.h: removed inclusion of gmp.h
	* common.h: cob_decimal is now only used if gmp.h / mpir.h / mp.h was
	  included before libcob.h, otherwise COB_WITHOUT_DECIMAL is defined
	* mlio.c: fixed missing include stddef.h

2019-03-19  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: definition of COB_MAX_NAMELEN