@@ -1,4 +1,9 @@
 
+2019-05-13  Simon Sobisch <simonsobisch@gnu.org>
+
+	* common.c (cob_fatal_error): added statement (if available) for
+	  COB_FERROR_FILE
+
 2019-05-11  Simon Sobisch <simonsobisch@gnu.org>
 
 	* common.h: increased COB_MAX_WORDLEN to 63 per COBOL 202x
